removing unused components

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,4 @@
-<!--
-* CoreUI - Free Angular Admin Template
-* @version v2.5.2
-* @link https://coreui.io/angular/
+  <!--
 * Copyright (c) 2018 creativeLabs Łukasz Holeczek
 * Licensed under MIT (https://coreui.io/license)
 -->
@@ -12,11 +9,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="CoreUI - Free Angular Admin Template">
-  <meta name="author" content="Łukasz Holeczek">
-  <meta name="keyword" content="Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript">
-	<link rel="shortcut icon" href="assets/favicon.ico">
-	<title>CoreUI - Free Angular Admin Template</title>
+  <meta name="description" content="Predictive Model">
+  <meta name="author" content="Steven Benmoha">
+	<link rel="shortcut icon" href="assets/img/analytics.png">
+	<title>Predictive Payer Model</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118965717-3"></script>
   <script>
